--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Liao Ziwei"
   avatar           : "profile.png"
-  bio              : "Master student at Beihang University, concentrate on semantic SLAM, computer vision and robotics."
+  bio              : "A master student at Beihang University, concentrating on visual SLAM, semantic scene understanding and robots navigation."
   location         : "Beijing, China"
   employer         :
   pubmed           : 
