add pubs; update bio

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Liao Ziwei"
   avatar           : "profile.png"
-  bio              : "A master student at Beihang University, concentrating on visual SLAM, semantic scene understanding and robots navigation."
+  bio              : "Master candidate, the Robotics Institute, Beihang University (BUAA)."
   location         : "Beijing, China"
   employer         :
   pubmed           : 
