--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Liao Ziwei"
   avatar           : "profile.png"
-  bio              : "Master candidate, the Robotics Institute, Beihang University (BUAA)."
+  bio              : "I am a master candidate at the Robotics Institute of Beihang University (BUAA)."
   location         : "Beijing, China"
   employer         :
   pubmed           : 
