--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ziwei Liao"
   avatar           : "profile.png"
-  bio              : "Master candidate, Robotics Institute, Beihang University (BUAA)"
+  bio              : "Master candidate, Robotics Institute, Beihang University"
   location         : "Beijing, China"
   employer         :
   pubmed           : 
