--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Liao Ziwei"
+title                    : "Ziwei Liao"
 title_separator          : "-"
-name                     : &name "Liao Ziwei"
+name                     : &name "Ziwei Liao"
 description              : &description "Master candidate, Robotics Institute, Beihang University, China"
 url                      : https://liao-zw.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
