--- a/_config.yml
+++ b/_config.yml
@@ -81,13 +81,13 @@ analytics:
 # Site Author
 author:
   name             : "Ziwei Liao"
-  avatar           : "profile.png"
-  bio              : "Master candidate, Robotics Institute, Beihang University"
-  location         : "Beijing, China"
+  avatar           : "profile_ziwei.jpg"
+  bio              : "Ph.D. Candidate, Institute for Aerospace Study, University of Toronto"
+  location         : "Toronto, Canada"
   employer         :
   pubmed           : 
-  googlescholar    : 
-  email            : "liaoziwei@buaa.edu.cn"
+  googlescholar    : https://scholar.google.com/citations?user=IhfB2iQAAAAJ&hl=en
+  email            : "ziwei.liao@mail.utoronto.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
