update home and research

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ziwei Liao"
   avatar           : "profile_ziwei.png"
-  bio              : "Ph.D. Candidate, Institute for Aerospace Study, University of Toronto"
+  bio              : "Ph.D. Candidate, University of Toronto"
   location         : "Toronto, Canada"
   employer         :
   pubmed           : 
