--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,9 @@ main:
   # - title: "Guide"
   #   url: /markdown/
 
+  - title: "Home"
+    url: /
+
   - title: "Research"
     url: /research/
 
