--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ziwei Liao"
-  avatar           : "profile_ziwei.png"
+  avatar           : "profile_ziwei.jpg"
   bio              : "Ph.D. Candidate, University of Toronto"
   location         : "Toronto, Canada"
   employer         :
